PGW-79: Header colorbox image height increased, title alignment fixed

--- a/sites/all/themes/tpg_theme/sass/components/page-elements/_colorbox.scss
+++ b/sites/all/themes/tpg_theme/sass/components/page-elements/_colorbox.scss
@@ -151,9 +151,10 @@
 
 .header-image-lightbox {
   img {
-    height: 70vh;
+    height: 80vh;
     margin-left: auto;
     margin-right: auto;
+    max-width: none;
     width: auto;
   }
 
@@ -271,11 +272,6 @@
       &:after {
         display: none;
       }
-    }
-
-    img {
-      @include centered-image;
-      max-width: none;
     }
 
     [class*="field-caption"] {
